// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorJobs Private Methods checkStatus should throw an error when an invalid status is present 1`] = `"Error Details: An unknown status \\"undefined\\" was received."`;

exports[`MonitorJobs Private Methods checkStatus should throw an error when an invalid status is present 2`] = `"Error Details: An unknown status \\"something-invalid\\" was received."`;

exports[`MonitorJobs Private Methods pollForStatus should expire after the max attempts and the total time should exceed the attempts multiplied by the delay 1`] = `
"Error obtaining status for jobname \\"FAKE\\" jobid \\"FAKE\\".
Error Details: Reached max poll attempts of \\"4\\""
`;

exports[`MonitorJobs Private Methods pollForStatus should expire after the specified number of max attempts 1`] = `
"Error obtaining status for jobname \\"FAKE\\" jobid \\"FAKE\\".
Error Details: Reached max poll attempts of \\"10\\""
`;

exports[`MonitorJobs Private Methods pollForStatus should expire after the specified number of max attempts and use the default watch delay 1`] = `
"Error obtaining status for jobname \\"FAKE\\" jobid \\"FAKE\\".
Error Details: Reached max poll attempts of \\"2\\""
`;

exports[`MonitorJobs Private Methods pollForStatus should return after the status has changed from INPUT to ACTIVE 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "ACTIVE",
}
`;

exports[`MonitorJobs Public Methods waitForJobOutputStatus should detect missing IJob 1`] = `"Expect Error: IJob object (containing jobname and jobid) required"`;

exports[`MonitorJobs Public Methods waitForJobOutputStatus should throw an error when job is not passed 1`] = `"Expect Error: IJob object (containing jobname and jobid) required"`;

exports[`MonitorJobs Public Methods waitForStatusCommon error handling should throw the proper error if pollForStatus throws a normal error 1`] = `
"Error obtaining status for jobname \\"JOB1234\\" jobid \\"123456\\".
THIS IS A NORMAL ERROR"
`;

exports[`MonitorJobs Public Methods waitForStatusCommon error handling should throw the proper error if pollForStatus throws an ImperativeError 1`] = `
"Error obtaining status for jobname \\"JOB1234\\" jobid \\"123456\\".
EXPECT THIS TO BE THROWN"
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should produce a 'wrapped' error message if getJobs throws an error - then/catch 1`] = `
"Error obtaining status for jobname \\"FAKE\\" jobid \\"FAKE\\".
Error Details: An unknown status \\"undefined\\" was received."
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should produce a 'wrapped' error message if getJobs throws an error 1`] = `
"Error obtaining status for jobname \\"FAKE\\" jobid \\"FAKE\\".
Error Details: An unknown status \\"undefined\\" was received."
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should return immediately if the initial status is ACTIVE and the expected status is ACTIVE 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "ACTIVE",
}
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should return immediately if the initial status is ACTIVE and the expected status is INPUT 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "ACTIVE",
}
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should return immediately if the initial status is OUTPUT and the expected status is ACTIVE 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "OUTPUT",
}
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should return immediately if the initial status is OUTPUT and the expected status is INPUT 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "OUTPUT",
}
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should return immediately if the initial status is OUTPUT and the expected status is OUTPUT 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "OUTPUT",
}
`;

exports[`MonitorJobs Public Methods waitForStatusCommon expects should return immediately if the initial status is the expected status 1`] = `
Object {
  "jobid": "FAKE",
  "jobname": "FAKE",
  "status": "OUTPUT",
}
`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should detect a blank jobid 1`] = `"Expect Error: Required parameter 'jobid' must not be blank"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should detect a blank jobname 1`] = `"Expect Error: Required parameter 'jobname' must not be blank"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should detect if missing params 1`] = `"Expect Error: IMonitorJobParms object required"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should detect invalid attempts type 1`] = `"Expect Error: Object key 'attempts' must be of type 'number'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should detect invalid watchDelay type 1`] = `"Expect Error: Object key 'watchDelay' must be of type 'number'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should error if missing parms.jobid 1`] = `"Expect Error: Required parameter 'jobid' must be defined"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should error if missing parms.jobname 1`] = `"Expect Error: Required parameter 'jobname' must be defined"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should error if missing session 1`] = `"Expect Error: Required session must be defined"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should error if parms.attempts is not valid 1`] = `"Expect Error: Object key 'attempts' must be of type 'number'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should error if parms.status is not valid 1`] = `"Expect Error: The required entry was NOT found within the input array: 'INPUT','ACTIVE','OUTPUT'"`;

exports[`MonitorJobs Public Methods waitForStatusCommon parameter expectations should error if parms.watchDelay is not valid 1`] = `"Expect Error: Object key 'watchDelay' must be of type 'number'"`;

exports[`MonitorJobs constant defaults should have a job status 1`] = `"OUTPUT"`;

exports[`MonitorJobs constant defaults should have a max attempts 1`] = `Infinity`;

exports[`MonitorJobs constant defaults should have a watch delay interval 1`] = `3000`;
